--- a/App/android/app/src/main/res/values/strings.xml
+++ b/App/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">lender</string>
-    <string name="title_activity_main">lender</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Jankalyan</string>
+    <string name="title_activity_main">Jankalyan</string>
+    <string name="package_name">com.jankalyan.app</string>
+    <string name="custom_url_scheme">com.jankalyan.app</string>
 </resources>
